netinfra.yml
Description: >
    Challenge 2

Parameters:
    EnvironmentName:
        Description: An environment name that will be prefixed to resource names
        Type: String
    VpcCIDR: 
        Description: Please enter the IP range (CIDR notation) for this VPC
        Type: String
        Default: 10.0.0.0/16
    PubSubCIDR:
        Type: String
        Default: 10.0.1.0/24
    PrivSubCIDR:
        Type: String
        Default: 10.0.2.0/24
Resources:
    myVPC:
        Type: AWS::EC2::VPC
        Properties: 
            CidrBlock: !Ref VpcCIDR
            EnableDnsHostnames: true
            Tags: 
                - Key: stack
                  Value: !Ref EnvironmentName
    myInternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
            - Key: stack
              Value: EnvironmentName
    IGAttachGateway:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            VpcId:
              Ref: myVPC
            InternetGatewayId:
              Ref: myInternetGateway
    myPubSubnet:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId:
              Ref: myVPC
            CidrBlock: 
              Ref: PubSubCIDR
            AvailabilityZone: !Select [ 0, !GetAZs '' ]
            Tags:
              - Key: stack
                Value: EnvironmentName
    myPrivSubnet:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId:
              Ref: myVPC
            CidrBlock: 
              Ref: PrivSubCIDR
            AvailabilityZone: !Select [ 0, !GetAZs '' ]
            Tags:
              - Key: stack
                Value: EnvironmentName
    NatGateway:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId:
                Fn::GetAtt:
                    - EIP
                    - AllocationId
            SubnetId:
                Ref: myPubSubnet
            Tags:
                - Key: stack
                  Value: EnvironmentName
    EIP:
        DependsOn: IGAttachGateway
        Type: AWS::EC2::EIP
        Properties:
            Domain: vpc
    myPubSubRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:  
                Ref: myVPC
            Tags:
              - Key: stack
                Value: EnvironmentName
    DefaultPublicRoute:
        Type: AWS::EC2::Route
        DependsOn: IGAttachGateway
        Properties:
            RouteTableId:
                Ref: myPubSubRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId:
                Ref: myInternetGateway
    PublicSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref myPubSubRouteTable
            SubnetId: !Ref myPubSubnet
    
    myPrivSubRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:  
                Ref: myVPC
            Tags:
              - Key: stack
                Value: EnvironmentName
    DefaultRouteFromPrivSub:
        Type: AWS::EC2::Route
        DependsOn: IGAttachGateway
        Properties:
            RouteTableId:
                Ref: myPrivSubRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId:
                Ref: NatGateway
    PrivSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref myPrivSubRouteTable
            SubnetId: !Ref myPrivSubnet
Outputs: 

    VPC: 
        Description: A reference to the created VPC to use in other yml files
        Value: !Ref myVPC
        Export:
          Name: !Sub ${EnvironmentName}-VPCID
    PrivateSubnet:
        Description: A list of the private subnets
        Value: !Ref myPrivSubnet
        Export:
          Name: !Sub ${EnvironmentName}-PRIV-NETS
