servinfra.yml
Parameters:
    EnvironmentName:
        Description: An environment name that will be prefixed to resource names
        Type: String
    myLaunchTemplateVersionNumber:
        Type: String
        Default: 1
Resources:
    RoleForSSMAccess:
        Type: "AWS::IAM::Role"
        Properties:
            RoleName: "Ec2RoleForSSM"
            Description: "EC2 IAM role for SSM access"
            AssumeRolePolicyDocument:
                Version: "2012-10-17"
                Statement:
                  - Effect: "Allow"
                    Principal:
                      Service:
                        - "ec2.amazonaws.com"
                    Action:
                      - "sts:AssumeRole"
            ManagedPolicyArns:
              - "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
            Policies: []
    MyInstanceProfile: 
        Type: "AWS::IAM::InstanceProfile"
        Properties: 
                Path: "/"
                Roles: 
                    - 
                      Ref: "RoleForSSMAccess"
    WebAccessSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
          GroupDescription: Allow http to our hosts and SSH from local only
          VpcId:
            Fn::ImportValue:
              !Sub "${EnvironmentName}-VPCID"
          SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 8080
            ToPort: 8080
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 22
            ToPort: 22
            CidrIp: 0.0.0.0/0
          SecurityGroupEgress:
          - IpProtocol: -1
            FromPort: -1
            ToPort: -1
            CidrIp: 0.0.0.0/0
    ServerInstance: 
        Type: AWS::EC2::Instance
        Properties: 
              LaunchTemplate: 
                LaunchTemplateId: !Ref myWebAppLaunchTemplate
                Version: !Ref myLaunchTemplateVersionNumber
              SubnetId: 
                  Fn::ImportValue:
                    !Sub ${EnvironmentName}-PRIV-NETS
    myWebAppLaunchTemplate:
        
        Type: AWS::EC2::LaunchTemplate
        Properties: 
          LaunchTemplateData:
            UserData:
              Fn::Base64: !Sub |
                #!/bin/bash
                apt-get update -y
                apt-get install apache2 -y
                systemctl start apache2.service
                cd /var/www/html
                echo "Udacity Demo Web Server Up and Running!" > index.html
            ImageId: ami-0e472ba40eb589f49
            KeyName: test1
            SecurityGroupIds: 
            - Ref: WebAccessSecurityGroup
            InstanceType: t3.small
            BlockDeviceMappings:
            - DeviceName: "/dev/sdk"
              Ebs:
                VolumeSize: '6'
